--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
-# handlers file for ansible-kibana-role
+- name: restart Kibana
+  become: true
+  service:
+    name: kibana
+    state: restarted
+  when: ansible_virtualization_type != 'docker'
