--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Rail Sakhaviev
-  description: your role description
+  description: Lead Software Engineer
   company: netology
   role_name: kibana_role
 
